[package]
name = "container-stats"
version = "0.4.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
description = "A small tool to analyze RAM usage of large amounts of docker containers."
edition = "2018"

[dependencies]
proc-maps = "0.1.6"
dockworker = { version = "0.0.17", default_features = false, features = [] }
itertools = "0.9.0"
bytesize = "1.0.0"
tabled = "0.1.0"
structopt = "0.3"
fancy-regex = "0.3.3"
procfs = "0.7.8"
serde_json = "1.0.51"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4.0"
env_logger = "0.7.1"

[profile.release]
opt-level = "z"
lto = true
